<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.java.puzzle</groupId>
	<artifactId>spring-boot-jlama-example</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>spring-boot-jlama-example</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<jlama.version>0.8.4</jlama.version>
		<langchain4j.version>1.11.0-beta19</langchain4j.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<!--jLama library-->
		<dependency>
			<groupId>com.github.tjake</groupId>
			<artifactId>jlama-core</artifactId>
			<version>${jlama.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.hubspot.jinjava</groupId>
					<artifactId>jinjava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.hubspot.jinjava</groupId>
			<artifactId>jinjava</artifactId>
			<version>2.8.3</version>
		</dependency>
		<dependency>
			<groupId>com.github.tjake</groupId>
			<artifactId>jlama-native</artifactId>
			<!-- supports linux-x86_64, macos-x86_64/aarch_64, windows-x86_64
                 Use https://github.com/trustin/os-maven-plugin to detect os and arch -->
			<classifier>windows-x86_64</classifier>
			<version>${jlama.version}</version>
		</dependency>

		<!--langchain4j library-->
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j</artifactId>
			<version>1.11.0</version>
		</dependency>

		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-jlama</artifactId>
			<version>1.11.0-beta19</version>
			<exclusions>
				<exclusion>
					<groupId>com.github.tjake</groupId>
					<artifactId>jlama-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>21</release>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>--add-modules=jdk.incubator.vector --enable-preview --enable-native-access=ALL-UNNAMED</jvmArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--add-modules=jdk.incubator.vector --enable-preview --enable-native-access=ALL-UNNAMED</argLine>
					<forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>--add-modules=jdk.incubator.vector --enable-preview --enable-native-access=ALL-UNNAMED</argLine>
					<forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
